js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-arrow-no-new-call-expression.js
DONOTEVALUATE
(
)
;
let
f
=
(
)
=
>
{
new
import
(
'
'
)
;
}
;
